{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 11,
  "lineage": "486507ce-9b28-6247-298d-f820b1dd1c37",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myEc2Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-057752b3f1d6c4d6c",
            "arn": "arn:aws:ec2:ap-south-1:888668829674:instance/i-08f6496db6bff32bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f6496db6bff32bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4183ce5912ead01",
            "private_dns": "ip-10-0-0-84.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.84",
            "public_ip": "35.154.188.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f25a82d99f7b1d70",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035fdbd7526d44089",
            "tags": {
              "Name": "publicEc2"
            },
            "tags_all": {
              "Name": "publicEc2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064da0a082fbb2ad3"
            ]
          },
          "dependencies": [
            "aws_security_group.mySecureGrp",
            "aws_subnet.publicSubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:internet-gateway/igw-07f5b5b39584755c2",
            "id": "igw-07f5b5b39584755c2",
            "owner_id": "888668829674",
            "tags": {
              "Name": "myIGW1"
            },
            "tags_all": {
              "Name": "myIGW1"
            },
            "vpc_id": "vpc-0a9d0919342cc0fde"
          },
          "dependencies": [
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:route-table/rtb-0577668e9becb1ac4",
            "id": "rtb-0577668e9becb1ac4",
            "owner_id": "888668829674",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f5b5b39584755c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myRoute"
            },
            "tags_all": {
              "Name": "myRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9d0919342cc0fde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW1",
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myPublicRouteAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8079df7a4c6246c",
            "route_table_id": "rtb-0577668e9becb1ac4",
            "subnet_id": "subnet-035fdbd7526d44089"
          },
          "dependencies": [
            "aws_internet_gateway.myIGW1",
            "aws_route_table.myPublicRoute",
            "aws_subnet.publicSubnet1",
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySecureGrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:security-group/sg-064da0a082fbb2ad3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064da0a082fbb2ad3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mySecureGrp",
            "name_prefix": "",
            "owner_id": "888668829674",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mySecureGrp"
            },
            "tags_all": {
              "Name": "mySecureGrp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9d0919342cc0fde"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:subnet/subnet-09bf25a121f8d7f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf25a121f8d7f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888668829674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privateSubnet1"
            },
            "tags_all": {
              "Name": "privateSubnet1"
            },
            "vpc_id": "vpc-0a9d0919342cc0fde"
          },
          "dependencies": [
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:subnet/subnet-035fdbd7526d44089",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035fdbd7526d44089",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888668829674",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet1"
            },
            "tags_all": {
              "Name": "publicSubnet1"
            },
            "vpc_id": "vpc-0a9d0919342cc0fde"
          },
          "dependencies": [
            "aws_vpc.myVpc1",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:888668829674:vpc/vpc-0a9d0919342cc0fde",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0205e5e597424ff8a",
            "default_route_table_id": "rtb-0678024f993708e36",
            "default_security_group_id": "sg-0aba0166f415b0a68",
            "dhcp_options_id": "dopt-036ec6464084aa14b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9d0919342cc0fde",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0678024f993708e36",
            "owner_id": "888668829674"
          }
        }
      ]
    }
  ]
}